switching around times

--- a/change.html
+++ b/change.html
@@ -87,23 +87,28 @@
                                 <section class="card mt-4">
                                     <div class="work-custom-body work-custom-body-other">
                                         <h2 class="dark-green fw-bold">
-                                            Tan
+                                            French
                                         </h2>
-                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>12:00 PM - 1:00 PM</span>
+                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>9:30 AM - 10:00 AM</span>
                                         <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Scrub (exfoliate) your skin with a loofah before tanning.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Apply 30+ SPF sunscreen before tanning.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Only wearing shorts, spend 30 minutes on your back, then 30 minutes on your front.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Listen to a Duolingo French podcast episode.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Watch a movie in French with subtitles when ready.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Continue to brush up on Duolingo lessons periodically, getting everything to level 2.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Sign up for lessons with iTalki.com, where I can talk to native French speakers and tutors.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Continue to talk with French natives on HelloTalk.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Read the Duolingo French notes on Duome, essentially a French grammar textbook.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Read French news, watch French shows, and consider buying French books (Harry Potter in French).</li>
                                         </ul>
                                     </div>
                                 </section>
+
 
                                 <section class="card mt-4">
                                     <div class="work-custom-body">
                                         <h2 class="dark-green fw-bold">
                                             Workout
                                         </h2>
-                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>1:30 PM - 3:00 PM</span>
+                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>10:30 PM - 12:00 PM</span>
                                         <ul class="list-group list-group-flush quicksand">
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Sunday (Legs 1), Monday (Push 1), Tuesday (Pull 1), Wednesday (Legs 2), Thursday (Push 2), Friday (Pull 2).</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Have 15-30 minutes of cardio (biking, stairmaster) after each workout.</li>
@@ -117,19 +122,15 @@
                                 </section>
 
                                 <section class="card mt-4">
-                                    <div class="work-custom-body">
+                                    <div class="work-custom-body work-custom-body-other">
                                         <h2 class="dark-green fw-bold">
-                                            French
+                                            Tan
                                         </h2>
-                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>3:30 PM - 4:00 PM</span>
+                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>12:30 PM - 1:30 PM</span>
                                         <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Listen to a Duolingo French podcast episode.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Watch a movie in French with subtitles when ready.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Continue to brush up on Duolingo lessons periodically, getting everything to level 2.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Sign up for lessons with iTalki.com, where I can talk to native French speakers and tutors.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Continue to talk with French natives on HelloTalk.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Read the Duolingo French notes on Duome, essentially a French grammar textbook.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Read French news, watch French shows, and consider buying French books (Harry Potter in French).</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Scrub (exfoliate) your skin with a loofah before tanning.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Apply 30+ SPF sunscreen before tanning.</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Only wearing shorts, spend 30 minutes on your back, then 30 minutes on your front.</li>
                                         </ul>
                                     </div>
                                 </section>
@@ -139,7 +140,7 @@
                                         <h2 class="dark-green fw-bold">
                                             Piano and Singing
                                         </h2>
-                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>7:00 PM - 7:30 PM</span>
+                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>1:30 PM - 2:00 PM</span>
                                         <ul class="list-group list-group-flush quicksand">
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Singing: Make sure you feel a hum at the front of your nose to make sure you're being forward.</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Singing: Air and energy are the two biggest factors.</li>
