big changes- confidence
removal of community
no more times
don't overthink

--- a/change.html
+++ b/change.html
@@ -35,11 +35,16 @@
                                             Confidence
                                         </h2>
                                         <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Keep your mind occupied and be confident</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Keep your mind busy and be confident</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Talk slowly and use the whole breath</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Focus well on one thing at once</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Take every opportunity</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Talk like how you feel like talking in the moment. High pitched? Formal? Fast? Doesn’t matter, speak it</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>If all else fails, just try to be a good listener</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Everyone gets the same Isaac. Don't change yourself for anyone</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Everyone gets the same Isaac. Don't change for anyone</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>I can't read minds</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Be your own energy, not other people's</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Talk to everyone</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Don't be afraid to ask for help</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>If in doubt, don't overthink</li>
                                         </ul>
                                     </div>
                                 </section>
@@ -55,8 +60,8 @@
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Avoid processed foods and sugary drinks</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Eat when hungry, stop when full. Eat smaller portions</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>My plate should be half vegetables, a quarter whole grain, and a quarter protein</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Take daily multivitamin and Flonase daily</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Tan every day for 45 minutes, wearing sunscreen</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Use facial moisturizer daily, sunscreen when outside for more than 20 minutes</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Protein shake and shower after workout</li>
                                         </ul>
                                     </div>
                                 </section>
@@ -64,50 +69,27 @@
                                 <section class="card mt-4">
                                     <div class="work-custom-body">
                                         <h2 class="dark-green fw-bold">
-                                            Community
+                                            French
                                         </h2>
                                         <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Don't be afraid to ask for help</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Show that you are appreciative when hanging out with others</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Instead of trying to make others like us, focus on trying to make others like being around us</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>In group conversations, say things with the motivation of adding to the conversation. Create a good conversation together instead of being the best one in it</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Some good universal questions when meeting someone are "where are you from", "what do you do", and "what do you like most about that"</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Small talk has a purpose. It is how strangers "warm up" and figure out if they are compatible</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Listen to a Duolingo French podcast episode</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Watch French movies and shows with subtitles</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Continue working in the Easy French grammar book and reading Harry Potter in French</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Read French news and listen to French radio</li>
                                         </ul>
                                     </div>
                                 </section>
+
 
                                 <section class="card mt-4">
                                     <div class="work-custom-body work-custom-body-other">
                                         <h2 class="dark-green fw-bold">
-                                            French
-                                        </h2>
-                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>9:15 AM - 9:45 AM</span>
-                                        <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Listen to a Duolingo French podcast episode</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Watch a movie in French with subtitles</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Brush up on Duolingo lessons</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Read the Duolingo French notes on Duome, essentially a French grammar textbook</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Read French news, watch French shows, and consider buying French books (Harry Potter in French)</li>
-                                        </ul>
-                                    </div>
-                                </section>
-
-
-                                <section class="card mt-4">
-                                    <div class="work-custom-body">
-                                        <h2 class="dark-green fw-bold">
                                             Workout
                                         </h2>
-                                        <span class="badge-custom d-inline-flex"><i class="fa-solid fa-clock"></i>10:15 AM - 11:45 AM</span>
                                         <ul class="list-group list-group-flush quicksand">
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Sunday (Legs 1), Monday (Push 1), Tuesday (Pull 1), Wednesday (Legs 2), Thursday (Push 2), Friday (Pull 2)</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Have 10-20 minutes of cardio (biking, stairmaster) after each workout.</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Eat a banana (or some other carb) before a workout for energy.</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Keep to a consistent routine. Missing one workout will negatively affect my workouts for the rest of the week</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Listen to energetic music during the workout and relaxing music afterwards to begin recovery</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Drink a protein shake after each workout</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Working out will give you self-esteem and confidence. When tired during reps, do "just one more" (over and over)</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>HIIT (perform on no-gym days): <br>Repeat four times, once for each exercise (pushups, burpees, squats, lunges): Perform as many reps as possible for 20 seconds, rest for 10 seconds and repeat for a total of four times. Rest one minute</li>
                                         </ul>
                                     </div>
