--- a/change.html
+++ b/change.html
@@ -35,16 +35,11 @@
                                             Confidence
                                         </h2>
                                         <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Keep your mind busy and be confident</li>
-                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Talk slowly and use the whole breath</li>
-                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Focus well on one thing at once</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Take every opportunity</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Everyone gets the same Isaac. Don't change for anyone</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Keep your mind busy</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Utilize your personality and voice</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>If in doubt, don't overthink</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Everyone gets the same Isaac</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>I can't read minds</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Be your own energy, not other people's</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Talk to everyone</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Don't be afraid to ask for help</li>
-                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>If in doubt, don't overthink</li>
                                         </ul>
                                     </div>
                                 </section>
