--- a/change.html
+++ b/change.html
@@ -35,9 +35,8 @@
                                             Confidence
                                         </h2>
                                         <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Keep your mind busy</li>
-                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Use your personality and voice</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>If in doubt, don't overthink</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Be Yourself</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Put yourself first</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Everyone gets the same Isaac</li>
                                             <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>I can't read minds</li>
                                         </ul>
