--- a/change.html
+++ b/change.html
@@ -35,10 +35,10 @@
                                             Confidence
                                         </h2>
                                         <ul class="list-group list-group-flush quicksand">
-                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Be Yourself</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Put yourself first</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Everyone gets the same Isaac</li>
-                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>I can't read minds</li>
+                                            <li class="list-group-item fw-bold"><i class="fa-solid fa-caret-right"></i>Embrace the weird</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Block out the noise</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Talk definitively</li>
+                                            <li class="list-group-item"><i class="fa-solid fa-caret-right"></i>Don't compete</li>
                                         </ul>
                                     </div>
                                 </section>
